@@ -2,6 +2,8 @@ Package: R.filesets
 ===================
 
 Version: 2.5.11 [2014-08-26]
+o Added support for sortBy(..., by="filesize") and
+  sortBy(..., decreasing=TRUE) for GenericDataFileSet.
 o Added rep() for GenericDataFileSet.
 
 
